--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@ hs_err_pid*
 *.iml
 
 
+/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
+/target/maven-archiver/pom.properties
