--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>fr.antonin-ruan</groupId>
     <artifactId>MaoServer</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.2.0</version>
 
     <properties>
         <maven.compiler.source>14</maven.compiler.source>
