--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ hs_err_pid*
 /target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
 /target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
 /target/maven-archiver/pom.properties
+/out
